--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,13 @@
-icewm -- authors file.  2022-11-02
+icewm -- authors file.  2022-11-08
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Stéphane LASSALVY <stephane.lassalvy@laposte.net>
+Author: Wallon <franckjl@hotmail.com>
+Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
+Author: Victor hck <correohck@gmail.com>
 Author: Eduard Bloch <blade@debian.org>
 Author: Kristijan Fremen Velkovski <me@krisfremen.com>
-Author: Stéphane LASSALVY <stephane.lassalvy@laposte.net>
 Author: marcelo cripe <marcelocripe@gmail.com>
-Author: Wallon <franckjl@hotmail.com>
 Author: Alexey Yaryshev <clarkez344@gmail.com>
 Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Ferdinand Galko <galko.ferdinand@gmail.com>
@@ -26,7 +28,6 @@ Author: Davide Aiello <davide.aiello@novilingulists.com>
 Author: Grace Yu <grace.yu@excel-gits.com>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: Paolo Za <zapaolo@email.it>
-Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: Ghassan <ghassan.alnajjar1984@gmail.com>
